--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "watch": "nodemon -w src --exec ts-node src/index.ts"
   },
   "dependencies": {
+    "dotenv": "^17.2.1",
     "express": "^4.18.0",
     "express-session": "^1.18.2",
     "jsonwebtoken": "^9.0.0",
