Removed session based authentication in favour for JWTs
This has simplified it greatly.

--- a/docs/example_site.conf
+++ b/docs/example_site.conf
@@ -2,14 +2,14 @@ server {
   listen      80;
   server_name mywebsite.localhost;
 
-  #Stuff needed to make it work. This setup uses a Public Client.
+  # Stuff needed to make it work. This setup uses a Public Client.
   set $oidc_client_id f16fae7c-3e7e-442d-a065-0594054b59cb;
   set $oidc_discovery_url https://oidc.localhost/.well-known/openid-configuration;
 
   location / {
     # This is how it authenticates. Using the 401 to redirect to a login page.
     auth_request /auth/oidc/verify;
-    auth_request_set $auth_context $upstream_http_x_auth_context;
+    auth_request_set $oidc_session $upstream_http_x_oidc_auth_session;
     error_page 401 = @oidc_login;
 
     #Regular website stuff
@@ -18,8 +18,8 @@ server {
 
   # This is the redirect rule. We need to share the auth_context and the redirect_uri back as cookies.
   location @oidc_login {         
-    add_header Set-Cookie "redirect_to=$request_uri; Path=/auth/oidc/; HttpOnly; Max-Age=300";
-    add_header Set-Cookie "auth_context=$auth_context; Path=/auth/oidc/; HttpOnly; Max-Age=300";
+    add_header Set-Cookie "oidc.redirect=$request_uri; Path=/auth/oidc/; HttpOnly; Max-Age=60";
+    add_header Set-Cookie "oidc.session=$oidc_session; Path=/; HttpOnly; Max-Age=60";
     return 302 /auth/oidc/login;
   }
 
