--- a/template.env
+++ b/template.env
@@ -1,9 +1,5 @@
 # Configured on your preference
 PORT=3600                               # Port the service listens too
 JWT_SECRET=""                           # Leave blank for a random one per lifetime of service.
-SESSION_SECRET=""                       # Leave blank for a random one per lifetime of service.
-COOKIE_MAX_AGE=860000                   # Duration of the logged-in session.
-ALLOWED_CLIENTS=""                      # CSV of client-ids that can use this auth_type. Leave blank for all.
-
-# Configured based on your NGINX
+SESSION_DURATION=3600                   # Duration of the logged-in session.
 REDIRECT_PATH="/auth/oidc/callback"     # This path controls what your OIDC will redirect back too
