--- a/package.json
+++ b/package.json
@@ -4,13 +4,12 @@
   "scripts": {
     "build": "tsc",
     "start": "node dist/index.js",
-    "dev": "ts-node index.ts",
+    "dev": "ts-node src/index.ts",
     "watch": "nodemon -w src --exec ts-node src/index.ts"
   },
   "dependencies": {
     "dotenv": "^17.2.1",
     "express": "^4.18.0",
-    "express-session": "^1.18.2",
     "jsonwebtoken": "^9.0.0",
     "openid-client": "^5.7.1"
   },
